--- a/style3.css
+++ b/style3.css
@@ -18,7 +18,7 @@ body {
 .hero {
     height: 100vh;
     width: 100vw;
-    background-image: url("https://i.ibb.co/p6Bn1Vp6/background.png");
+    background-image: url(../Assets/background.png);
     background-position: center;
     background-size: cover;
 }
