--- a/style3.css
+++ b/style3.css
@@ -307,7 +307,7 @@ body {
 @media (max-width: 576px) {
     
     .hero {
-            background-image: url(Assets/mobileBackground.png);
+            background-image: url(../Assets/mobileBackground.png);
         }
 
     .bubbles {
