--- a/style3.css
+++ b/style3.css
@@ -18,7 +18,7 @@ body {
 .hero {
     height: 100vh;
     width: 100vw;
-    background-image: url(/Assets/background.png);
+    background-image: url(Assets/background.png);
     background-position: center;
     background-size: cover;
 }
@@ -307,7 +307,7 @@ body {
 @media (max-width: 576px) {
     
     .hero {
-            background-image: url(/Assets/mobileBackground.png);
+            background-image: url(Assets/mobileBackground.png);
         }
 
     .bubbles {
